# GsplatLoc

./: .env  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  res.json
datasets/: render_option.json
docs/: README.md  json2md.py  main.md  output.tex  res.json  template.tex
docs/.obsidian/: community-plugins.json  core-plugins.json  workspace.json
docs/.obsidian/plugins/obsidian-auto-link-title/: main.js
docs/.obsidian/plugins/obsidian-enhancing-export/: data.json
docs/.obsidian/plugins/obsidian-enhancing-export/textemplate/: neurips.tex
docs/.obsidian/plugins/obsidian-git/: main.js
docs/.obsidian/plugins/obsidian-pandoc/: data.json
docs/.obsidian/plugins/obsidian-pandoc-reference-list/: data.json
docs/.obsidian/plugins/omnisearch/: data.json  main.js
docs/.obsidian/plugins/terminal/: data.json  main.js  manifest.json
docs/submission/: arxiv.sty  bibliography.bib  main.aux  main.bbl  main.bcf  main.blg  main.out  main.run.xml  main.tex
scripts/: download_datasets.sh  download_replica.sh  download_replica_full.sh  download_tum.sh  install_gicp.sh  install_gsplat.sh  pre-commit.sh  run_eval.sh
src/: GsplatLoc_eval.py  icps_eval.py  res.json
src/component/: __init__.py  tracker.py  visualize.py
src/data/: base.py  dataset.py
src/eval/: experiment.py  logger.py
src/my_gsplat/: geometry.py  gs_trainer.py  gs_trainer_total.py  loss.py  model.py  utils.py
